--- a/style.css
+++ b/style.css
@@ -128,17 +128,20 @@ table {
   border-spacing: 0;
 }
 
-/* MAIN */
+/* GENERAL */
 
-.img {
+img {
   max-width: 100%;
   height: auto;
   display: block;
+  object-fit: cover;
+  margin: auto;
 }
 
 body {
   box-sizing: border-box;
   font-family: Notosans TW, sans-serif;
+  /* padding: 0 32px; */
 }
 
 .title--h3 {
@@ -147,6 +150,10 @@ body {
   font-weight: 800;
   color: #650300;
   text-align: center;
+  @media (max-width: 767px) {
+    font-size: 24px;
+    line-height: 36px;
+  }
 }
 
 .title--h4 {
@@ -155,6 +162,10 @@ body {
   color: #aa0601;
   text-align: center;
   text-transform: uppercase;
+  @media (max-width: 367px) {
+    font-size: 36px;
+    line-height: 48px;
+  }
 }
 
 .container {
@@ -162,51 +173,136 @@ body {
   margin: 0 auto;
 }
 
+.p-36 {
+  padding: 36px;
+}
+
+.p-48 {
+  padding: 48px;
+}
+
+.mb-48 {
+  margin-bottom: 48px;
+}
+
+.mb-24 {
+  margin-bottom: 24px;
+}
+
+.mb-8 {
+  margin-bottom: 8px;
+}
+
 /* NAVIGATION */
 .navigation {
   background-color: #aa0601;
+  @media (max-width: 1296px) {
+    padding: 0 36px;
+  }
+  @media (max-width: 767px) {
+    padding: 0;
+  }
+}
+
+.navigation__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 312px;
+
+  @media (max-width: 767px) {
+    display: block;
+  }
 }
 
 .navigation__logo {
-  width: 80px;
   height: 48.75px;
-  object-fit: cover;
-  padding: 16px 0;
+  padding: 16px 0 16px 0px;
+  @media (max-width: 1296px) {
+    text-align: left;
+    margin: 0;
+  }
+  @media (max-width: 767px) {
+    padding: 16px 32px;
+  }
 }
 
-.navigation__linkbox {
+.navigation__list {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   gap: 64px;
+  flex-wrap: wrap;
+  width: 100%;
+  /* background-color: #007bff; */
+  @media (max-width: 767px) {
+    gap: 0;
+    justify-content: center;
+  }
+}
+
+.navigation__item {
+  /* background-color: green; */
+  width: 7%;
+
+  @media (max-width: 1296px) {
+    width: 13%;
+  }
+
+  @media (max-width: 767px) {
+    width: 49.5%;
+
+    border: 1px solid #fff;
+  }
 }
 
 .navigation__link {
+  display: block;
   font-size: 20px;
   line-height: 30px;
   color: #fff;
   text-decoration: none;
+
+  @media (max-width: 767px) {
+    padding: 12px;
+    text-align: center;
+  }
 }
 
 /* HEADER */
 .header {
   background-image: url("https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-header.png?raw=true");
+  background-repeat: no-repeat;
+  /* background-size: cover; */
+  background-position: center center;
+  height: auto;
   background-size: cover;
-  padding: 296px 0;
+
+  @media (max-width: 1296px) {
+    background-image: url("https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-header-sm.png?raw=true");
+  }
 }
 
 .header__titlebox {
+  /* margin-top: 296px; */
+  /* margin-bottom: 296px; */
+  padding: 296px 312px;
   text-align: right;
-  margin-right: 312px;
+  @media (max-width: 1296px) {
+    padding: 296px 36px;
+  }
+  @media (max-width: 767px) {
+    padding: 296px 13px;
+  }
 }
 
 .header__title {
   font-size: 36px;
   line-height: 54px;
   color: #650300;
+
+  @media (max-width: 767px) {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 
 .header__subtitle {
@@ -215,11 +311,15 @@ body {
   color: #650300;
   margin-bottom: 4px;
   font-weight: 700;
+  @media (max-width: 767px) {
+    font-size: 24px;
+    line-height: 36px;
+  }
 }
 
 .header__button {
   font-size: 20px;
-  line-height: 29px;
+  line-height: 30px;
   color: #fff;
   background-color: #aa0601;
   padding: 6px 12px;
@@ -231,10 +331,6 @@ body {
   background-color: #fbf2f2;
 }
 
-.features__container {
-  padding: 80px 312px;
-}
-
 .features__title {
   margin-bottom: 32.3px;
 }
@@ -243,20 +339,15 @@ body {
   display: flex;
   justify-content: space-between;
   gap: 24px;
-  flex-wrap: warp;
+  flex-wrap: wrap;
 }
 
 .features__item {
-  width: 23.5%;
-}
+  width: 23%;
 
-.features__icon {
-  width: 83.33px;
-  height: 83.33px;
-  object-fit: cover;
-  margin: auto;
-  display: block;
-  margin-bottom: 24px;
+  @media (max-width: 1296px) {
+    width: 48%;
+  }
 }
 
 .features__item__title {
@@ -273,35 +364,35 @@ body {
 
 /* CLASSIC */
 
-.calssic {
-  padding: 80px 312px;
-}
-
-.classic__container {
-  max-width: 1296px;
-  margin: 0 auto;
-}
-
-.classic__title {
-  margin-bottom: 48px;
+.classic {
+  @media (max-width: 1296px) {
+    padding: 0 36px;
+  }
+  @media (max-width: 767px) {
+    padding: 0 13px;
+  }
 }
 
 .classic__list {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
   gap: 24px;
+
+  @media (max-width: 1296px) {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .classic__item {
   width: 32%;
-}
-
-.classic__img {
-  margin-bottom: 8px;
-  width: 416px;
-  height: 416px;
-  object-fit: cover;
+  @media (max-width: 1296px) {
+    width: 50%;
+  }
+  @media (max-width: 767px) {
+    width: 100%;
+  }
 }
 
 /* COBRANDING */
@@ -309,7 +400,15 @@ body {
 .cobranding {
   background-image: url("https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/index-bg.png?raw=true");
   background-size: cover;
-  padding: 80px 312px;
+  padding: 80px 0;
+
+  @media (max-width: 1296px) {
+    padding: 80px 36px;
+  }
+
+  @media (max-width: 767px) {
+    padding: 80px 13px;
+  }
 }
 
 .cobranding__title {
@@ -321,18 +420,22 @@ body {
 .cobranding__list {
   display: flex;
   align-items: flex-start;
-  flex-wrap: wrap;
   list-style: none;
+
+  @media (max-width: 1296px) {
+    flex-direction: column;
+    align-items: center;
+    /* padding: 0 36px; */
+  }
 }
 
 .cobranding__item {
   width: 50%;
-}
 
-.cobranding__img {
-  width: 648px;
-  height: 240px;
-  object-fit: cover;
+  @media (max-width: 1296px) {
+    width: 100%;
+    margin-bottom: 24px;
+  }
 }
 
 .cobranding__h4 {
@@ -347,7 +450,13 @@ body {
 /* RECOMMEND */
 
 .recommend {
-  padding: 80px 312px;
+  @media (max-width: 1296px) {
+    padding: 0 36px;
+  }
+
+  @media (max-width: 767px) {
+    padding: 0 13px;
+  }
 }
 
 .recommend__list {
@@ -356,17 +465,22 @@ body {
   flex-wrap: wrap;
   gap: 24px;
   margin-top: 48px;
+
+  @media (max-width: 767px) {
+    margin-top: 24px;
+  }
 }
 
 .recommend__item {
   box-shadow: 0px 2px 6px #00000029;
   width: 23.6%;
-}
 
-.recommend__img {
-  width: 306px;
-  height: 306px;
-  object-fit: cover;
+  @media (max-width: 1630px) {
+    width: 48%;
+  }
+  @media (max-width: 767px) {
+    width: 100%;
+  }
 }
 
 .recommend__content {
@@ -393,11 +507,15 @@ body {
 
 .contact {
   background-color: #fbf2f2;
+  padding: 80px 0px;
+
+  @media (max-width: 767px) {
+    padding: 40px 13px;
+  }
 }
 
 .contact__container {
-  padding: 80px 642px;
-  width: 636px;
+  max-width: 636px;
   margin: 0 auto;
 }
 
@@ -406,6 +524,12 @@ body {
   line-height: 30px;
   margin-top: 48px;
   margin-bottom: 24px;
+
+  @media (max-width: 767px) {
+    font-size: 16px;
+    line-height: 24px;
+    margin-top: 24px;
+  }
 }
 
 .contact__form__label {
@@ -417,14 +541,28 @@ body {
 .contact__form__input {
   display: block;
   margin-bottom: 16px;
-  padding: 6px 0px 6px 12px;
   width: 100%;
   border: 1px solid #000000;
+  padding: 6px 0px;
 }
 
-.contact__form__input::placeholder,
+.contact__form__textarea {
+  display: block;
+  margin-bottom: 16px;
+  width: 100%;
+  /* padding: 6px 0px 0px 12px; */
+}
+
+.contact__form__input::placeholder {
+  display: block;
+  line-height: 24px;
+  padding-left: 12px;
+  opacity: 0.2;
+}
+
 .contact__form__textarea::placeholder {
   display: block;
+  padding-left: 12px;
   line-height: 24px;
   opacity: 0.2;
 }
@@ -439,13 +577,6 @@ body {
 .contact__form__textarea:focus:invalid {
   outline: none;
   border: 2px solid red;
-}
-
-.contact__form__textarea {
-  display: block;
-  margin-bottom: 16px;
-  width: 100%;
-  padding: 6px 0px 0px 12px;
 }
 
 .contact__checkbox__container {
@@ -484,6 +615,9 @@ body {
 .button__container {
   text-align: center;
   margin-top: 48px;
+  @media (max-width: 767px) {
+    margin-top: 24px;
+  }
 }
 
 .contact__form__button,
@@ -493,9 +627,14 @@ body {
   color: #fff;
   font-weight: 700;
   background-color: #aa0601;
-  padding: 16px 176px;
+  padding: 16px 172px;
   cursor: pointer;
   margin: 0 auto;
+
+  @media (max-width: 767px) {
+    padding: 16px 0px;
+    width: 100%;
+  }
 }
 
 .contact__form__button:hover {
@@ -510,17 +649,28 @@ body {
 
 .footer {
   background-color: #aa0601;
+
+  @media (max-width: 1296px) {
+    padding: 0 36px;
+  }
+
+  @media (max-width: 767px) {
+    padding: 0 13px;
+  }
 }
 
 .footer__container {
-  padding: 60px 312px 32px 316px;
+  padding: 60px 0px 32px 0px;
+  @media (max-width: 767px) {
+    padding: 24px 0px;
+  }
 }
 
 .footer__upper {
   border-bottom: 2px solid #fff;
   display: flex;
   justify-content: space-between;
-  align-items: flex-star;
+  align-items: flex-start;
 }
 
 .footer__linkList {
@@ -529,6 +679,10 @@ body {
   justify-content: space-between;
   gap: 48px;
   margin-bottom: 36px;
+
+  @media (max-width: 767px) {
+    display: none;
+  }
 }
 
 .footer__link {
@@ -540,44 +694,60 @@ body {
 
 .footer__info {
   padding-bottom: 32px;
+  @media (max-width: 767px) {
+    padding-bottom: 28px;
+  }
 }
 
 .footer__info__item {
   display: flex;
-  align-items: center;
 }
 
 .footer__info__icon--phone {
-  width: 40px;
   height: 40px;
-  object-fit: cover;
   margin-right: 20px;
+  margin-left: 0;
   color: white;
+  @media (max-width: 767px) {
+    height: 18px;
+    margin-right: 11px;
+  }
 }
 
 .footer__info__icon--email {
-  width: 40px;
   height: 32px;
-  object-fit: cover;
   margin-right: 20px;
+  margin-left: 0;
+  @media (max-width: 767px) {
+    height: 16px;
+    margin-right: 11px;
+  }
 }
 
 .footer__info__paragraph {
   font-size: 36px;
   line-height: 54px;
   color: white;
+  @media (max-width: 767px) {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 
 .footer__upper-right {
   display: flex;
   justify-content: space-between;
   gap: 32px;
+  @media (max-width: 767px) {
+    gap: 8px;
+  }
 }
 
 .footer__upper-right__icon {
-  width: 48px;
   height: 48px;
-  object-fit: cover;
+  @media (max-width: 767px) {
+    height: 24px;
+  }
 }
 
 .footer__lower {
@@ -585,6 +755,12 @@ body {
   justify-content: space-between;
   align-items: center;
   padding-top: 32px;
+
+  @media (max-width: 767px) {
+    display: block;
+    gap: 8px;
+    padding-top: 16px;
+  }
 }
 
 .footer__lower__paragraph {
@@ -597,6 +773,10 @@ body {
   align-items: center;
   justify-content: space-between;
   gap: 48px;
+  @media (max-width: 767px) {
+    display: block;
+    gap: 8px;
+  }
 }
 
 .footer__lower__link {
@@ -604,8 +784,11 @@ body {
   text-align: right;
   color: #fff;
   line-height: 24px;
+  @media (max-width: 767px) {
+    text-align: left;
+  }
 }
 
-/* * {
-  border: 1px solid red !important;
-} */
+* {
+  border: 0.2px solid red !important;
+}
