--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@ body {
 
   @media (max-width: 767px) {
     padding: 144px 13px;
-    background-size: 100% 100%;
+    /* background-size: 100% 100%; */
   }
 }
 
